# ilp-abstraction

./: CMakeLists.txt  Readme.md  main.cpp
cmake/modules/: FindGUROBI.cmake
src/: common.cpp  common.hpp  ilpa_cplex.cpp  ilpa_cplex.hpp  ilpa_gurobi.cpp  ilpa_gurobi.hpp
test/: CMakeLists.txt  basic.hpp  cplex_kinks.hpp  main.cpp  param_passthrough.hpp
